Add current state